--- a/conf/dbobj.conf
+++ b/conf/dbobj.conf
@@ -1,7 +1,7 @@
 #database configuration:
 #   mysql
 DB.type=mysql
-DB.tns = "tcp(localhost:3306)/mas"
+DB.tns = "tcp(118.31.46.174:3306)/mas"
 DB.user = root
 DB.passwd="xzPEh+SfFL3aimN0zGNB9w=="
 DB.maxConn = 200
@@ -12,11 +12,6 @@ DB.maxConn = 200
 #DB.user = ca
 #DB.passwd="wJAolGiEoiiF5Ll7yvPKqA=="
 #DB.maxConn=200
-
-###日志级别
-## debug
-## info
-Logger.level = debug
 
 ##context-root 暂时没有使用
 ##Context.root = "/"
