--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,3 +2,22 @@ ServerPort=8090
 https.enable=false
 https.crt="./conf/rui.crt"
 https.key="./conf/rui.key"
+
+
+#database configuration:
+#   mysql
+DB.type=mysql
+DB.tns = "tcp(118.31.46.174:3306)/mas"
+DB.user = root
+DB.passwd="xzPEh+SfFL3aimN0zGNB9w=="
+DB.maxConn = 200
+
+### oracle
+#DB.type= oracle
+#DB.tns = "172.168.171.200/bigdata"
+#DB.user = ca
+#DB.passwd="wJAolGiEoiiF5Ll7yvPKqA=="
+#DB.maxConn=200
+
+##context-root 暂时没有使用
+##Context.root = "/"
