add logger config info to app.conf

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -21,3 +21,8 @@ DB.maxConn = 200
 
 ##context-root 暂时没有使用
 ##Context.root = "/"
+
+## logger config
+level = debug
+name  = "panda.log"
+output = tmp
